--- a/husig_fabri/index.html
+++ b/husig_fabri/index.html
@@ -635,6 +635,135 @@
       </div>
     </div>
   </div>
+
+  <!-- Add this section after your existing HuSig Fabri section -->
+<section class="demo_section" id="husig-fabri-demo">
+  <div class="demo_container">
+    <div class="demo_header">
+      <h2 class="demo_title">See HuSig Fabri in Action</h2>
+      <p class="demo_subtitle">
+        Watch how our synthetic data generation platform transforms your workflow
+      </p>
+    </div>
+    
+    <div class="demo_video_wrapper">
+      <div class="video_container">
+        <iframe 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/gcGHG7vcrJM" 
+          title="HuSig Fabri Demo" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  </div>
+</section>
+
+<style>
+.demo_section {
+  padding: 80px 0;
+  position: relative;
+}
+
+.demo_container {
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.demo_header {
+  margin-bottom: 50px;
+}
+
+.demo_title {
+  font-size: 2.5rem;
+  font-weight: 400;
+  color: #2c3e50;
+  margin-bottom: 20px;
+  background: linear-gradient(135deg, #C062F2, #BF62F1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.demo_subtitle {
+  font-size: 1.2rem;
+  color: #6c757d;
+  max-width: 600px;
+  margin: 0 auto;
+  line-height: 1.6;
+}
+
+.demo_video_wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video_container {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  aspect-ratio: 16/9;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 20px 40px rgba(192, 98, 242, 0.15);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.video_container:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 30px 60px rgba(192, 98, 242, 0.25);
+}
+
+.video_container iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 20px;
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+  .demo_section {
+    padding: 60px 0;
+  }
+  
+  .demo_title {
+    font-size: 2rem;
+  }
+  
+  .demo_subtitle {
+    font-size: 1.1rem;
+  }
+  
+  .demo_container {
+    padding: 0 15px;
+  }
+  
+  .video_container {
+    border-radius: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .demo_title {
+    font-size: 1.8rem;
+  }
+  
+  .demo_subtitle {
+    font-size: 1rem;
+  }
+  
+  .video_container {
+    border-radius: 10px;
+  }
+}
+</style>
 </section>
 
     
