--- a/husig_fabri/index.html
+++ b/husig_fabri/index.html
@@ -651,7 +651,7 @@
         <iframe 
           width="560" 
           height="315" 
-          src="https://www.youtube.com/embed/gcGHG7vcrJM" 
+          src="https://www.youtube.com/embed/2Vthj229xLE" 
           title="HuSig Fabri Demo" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
