--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <link rel="stylesheet" href="/css/homepage/homepageTestimonials.min.0cd9246b2c044f78a6cb6834e245cc6aef5fea5060a757a8549ae08ad7f26e7a.css" integrity="sha256-DNkkaywET3imy2g04kXMau9f6lBgp1eoVJrgitfybno=" crossorigin="anonymous">
 
 
-      <link rel="stylesheet" href="/css/main.min.127783c39a16569766f86f71205d910897dec0e0a9151febefd114950f941651.css" integrity="sha256-EneDw5oWVpdm&#43;G9xIF2RCJfewOCpFR/r79EUlQ&#43;UFlE=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/css/main.min.badaef692ed97a0d48aecd50955edc9c7711d047a60d683e7ca119f55fb57aec.css" integrity="sha256-utrvaS7Zeg1Irs1QlV7cnHcR0EemDWg&#43;fKEZ9V&#43;1euw=" crossorigin="anonymous">
 
 
       <link rel="stylesheet" href="/css/homepage.min.605c552560c2ef0cb4ffa9a551340fb8abb5e6a45ae4ec3ee0aaa8f62c4796a1.css" integrity="sha256-YFxVJWDC7wy0/6mlUTQPuKu15qRa5Ow&#43;4Kqo9ixHlqE=" crossorigin="anonymous">
