--- a/husig_fabri/index.html
+++ b/husig_fabri/index.html
@@ -637,7 +637,7 @@
     </div>
   </div>
 
-<!-- <section class="demo_section" id="husig-fabri-demo">
+<section class="demo_section" id="husig-fabri-demo">
   <div class="demo_container">
     <div class="demo_header">
       <h2 class="demo_title">See HuSig Fabri in Action</h2>
@@ -660,7 +660,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 <style>
 .demo_section {
