--- a/husig_fabri/index.html
+++ b/husig_fabri/index.html
@@ -636,7 +636,7 @@
       </div>
     </div>
   </div>
-
+<!-- 
 <section class="demo_section" id="husig-fabri-demo">
   <div class="demo_container">
     <div class="demo_header">
@@ -660,7 +660,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <style>
 .demo_section {
